# innowise-task

./: .gitignore  README.md
innotter/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_celery.sh
innotter/aws/: init.sh
innotter/aws/dynamodb_conf/: microservice_stats.json  schema.json
innotter/data/db/base/13757/: 1247  1249  1259  (+106 more)
innotter/data/db/global/: 1260  pg_control  pg_internal.init
innotter/data/db/pg_stat/: db_0.stat  db_13757.stat  global.stat
innotter/innotter/: aws_services.py  publisher.py  services.py  settings.py  urls.py  views.py
innotter/pages/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
innotter/pages/migrations/: 0001_initial.py  0002_initial.py  0002_like.py  0003_page_is_permanent_blocked.py  0004_remove_like_post_post_likes.py  0005_remove_post_likes_like_post.py  0006_alter_page_image.py
innotter/pages/serializers/: like_serializer.py  page_serializers.py  post_serializers.py  tag_serializers.py
innotter/posts/: models.py  serializers.py  urls.py  views.py
innotter/posts/migrations/: 0001_initial.py
innotter/tags/: urls.py  views.py
innotter/tags/migrations/: 0001_initial.py
innotter/tests/: conftest.py  test_pages.py  test_users.py
innotter/users/: authentication.py  backends.py  manager.py  middleware.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
innotter/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_managers.py  0004_alter_user_managers.py
