[tool.poetry]
name = "innotter"
version = "0.1.0"
description = "twitter clone"
authors = ["Sheshkon <sheskoalexei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
certifi = "2022.5.18.1"
charset-normalizer = "2.0.12"
coreapi = "2.3.3"
coreschema = "0.0.4"
Django = "4.0.5"
django-rest-swagger = "2.2.0"
djangorestframework = "3.13.1"
idna = "3.3"
itypes = "1.2.0"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
openapi-codec = "1.3.2"
PyJWT = "2.4.0"
python-dotenv = "0.20.0"
pytz = "2022.1"
requests = "2.28.0"
simplejson = "3.17.6"
sqlparse = "0.4.2"
uritemplate = "4.1.1"
urllib3 = "1.26.9"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
